force-app/main/default/objects/leaseworks__Engine_Module__c/leaseworks__Engine_Module__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Engine Module</label>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engine Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>