force-app/main/default/objects/leaseworks__Engine_Module__c/fields/leaseworks__Assembly_Event_Task__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Event_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Maintenance Event</label>
    <referenceTo>leaseworks__Historical_Event_Task__c</referenceTo>
    <relationshipLabel>Engine Modules</relationshipLabel>
    <relationshipName>Engine_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>