force-app/main/default/objects/leaseworks__Engine_Module__c/fields/leaseworks__IsAutoCreated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsAutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>