force-app/main/default/objects/leaseworks__Engine_Module__c/fields/leaseworks__Lowest_Limiter__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lowest_Limiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lowest Limiter in the individual LLPs</description>
    <inlineHelpText>Lowest Limiter in the individual LLPs</inlineHelpText>
    <label>Lowest Limiter</label>
    <referenceTo>leaseworks__Sub_Components_LLPs__c</referenceTo>
    <relationshipLabel>Engine Modules</relationshipLabel>
    <relationshipName>Engine_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>