force-app/main/default/objects/leaseworks__Engine_Module__c/fields/leaseworks__Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Repair_Status__c</fullName>
    <formula>IF( OR(ISNULL(leaseworks__Assembly_Event_Task__c), ISBLANK(leaseworks__Assembly_Event_Task__c ),NOT( leaseworks__Assembly_Event_Task__r.leaseworks__Historical_Event__r.leaseworks__Latest_Event_F__c ) )  , &apos;🔴-Not Overhauled&apos;, &apos;🟢-Overhauled&apos;)</formula>
    <label>Repair Status</label>
    <type>Text</type>
</CustomField>