force-app/main/default/objects/leaseworks__Engine_Module__c/fields/leaseworks__Y_Hidden_Module__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__LLP_Module</valueSetName>
    </valueSet>
</CustomField>