force-app/main/default/objects/leaseworks__Engine_Module__c/validationRules/leaseworks__changingModuleFromEngineModule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__changingModuleFromEngineModule</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( leaseworks__Y_Hidden_Module__c )</errorConditionFormula>
    <errorMessage>Changing the module on already saved record is not allowed as it might cause bad data and errors.</errorMessage>
</ValidationRule>